[package]
name = "r2d2-jfs"
version = "0.2.0"
license = "Apache-2.0 OR MIT"
readme = "README.md"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
description = "JFS support for the r2d2 connection pool"
repository = "https://github.com/flosse/r2d2-jfs"
documentation = "https://docs.rs/r2d2-jfs/"
keywords = ["json", "r2d2", "pool"]
edition = "2021"

[dependencies]
r2d2 = "0.8"
jfs = "0.7"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tempdir = "0.3"
